WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235726
AX: Isolated tree object frames no longer encode content offsets, so hit testing should be updated accordingly
https://bugs.webkit.org/show_bug.cgi?id=235726
Summary
AX: Isolated tree object frames no longer encode content offsets, so hit test...
Tyler Wilcock
Reported
2022-01-27 12:09:21 PST
In -[WKAccessibilityWebPageObjectMac accessibilityHitTest], we have a special isolated tree case: // Isolated tree frames have the offset encoded into them so we don't need to undo here. #if ENABLE(ACCESSIBILITY_ISOLATED_TREE) applyContentOffset = !WebCore::AXObjectCache::isIsolatedTreeEnabled(); #endif The statement in the comment no longer seems to be true, as applying this content offset results in hit testing working incorrectly -- specifically, you have to hit test for a larger y-value than your target is actually located at.
Attachments
Patch
(2.90 KB, patch)
2022-01-27 16:18 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-27 12:09:34 PST
<
rdar://problem/88146867
>
Tyler Wilcock
Comment 2
2022-01-27 16:18:27 PST
Created
attachment 450193
[details]
Patch
Tyler Wilcock
Comment 3
2022-01-27 17:46:09 PST
My original comment should say: as **NOT** applying this content offset results in hit testing working incorrectly It's correct in the Changelog.
EWS
Comment 4
2022-01-28 08:10:14 PST
Committed
r288741
(
246534@main
): <
https://commits.webkit.org/246534@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450193
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug